--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>omRm</title>
-    <!-- <link rel="stylesheet" href="css/base.css" />  -->
+    <link rel="stylesheet" href="./dist/style.css" />
   </head>
   <body>
     <div id="container"></div>
