--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./dist/style.css" />
   </head>
   <body>
-    <div id="container"></div>
+    <div id="app"></div>
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
