--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-    <title>omRm</title>
-    <link rel="stylesheet" href="./dist/style.css" />
+    <title>test</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="./dist/bundle.js"></script>
+  under construction
   </body>
 </html>
