--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-    <title>test</title>
+    <title>Johannes Burghardt</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-  under construction
+    <div class="wrapper">
+      <p class="title"> J. Burghardt </p>
+
+    <nav class="navigation">
+      <ul>
+        <li> <a href="#about" title="about me">About</a> </li>
+        <li> <a href="#thoughts" title="my blog">Thoughts</a> </li>
+        <li> <a href="#contact" title="contact">Contact</a> </li>
+      </ul>
+    </nav>
+
+
+
+    <div id="contact" class="page">
+
+      <p> jburghardt@mailbox.org </p>
+
+    </div>
+
   </body>
 </html>
