update email field

--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
 
     <nav class="navigation">
       <ul>
-        <li> <a href="#about" title="about me">About</a> </li>
-        <li> <a href="#thoughts" title="my blog">Thoughts</a> </li>
+        <li>About</li>
+        <li>Blog</li>
         <li> <a href="#contact" title="contact">Contact</a> </li>
       </ul>
     </nav>
 
-
-
     <div id="contact" class="page">
-
-      <p> jburghardt@mailbox.org </p>
-
+      <a href = "mailto:jburghardt@mailbox.org">jburghardt@mailbox.org</a>
     </div>
 
   </body>
