--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-    <title>Johannes Burghardt</title>
+    <title>J.Burghardt</title>
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
